apps/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql:latest
          ports:
            - containerPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
    - name: mysql
      port: 3306
  selector:
    app: mysql
