apps/response.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: response-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: response-back
  template:
    metadata:
      labels:
        app: response-back
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8082'
        prometheus.io/path: "/actuator/prometheus"
    spec:
      imagePullSecrets:
        - name: docker-pull-secret
      containers:
        - name: response-back
          image: hamgeonwook/response-back:26
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
          ports:
            - containerPort: 8080
              name: spring
            - containerPort: 8082
              name: spring-actuator
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: response-back-service
  labels:
    app: response-back-service
spec:
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: spring-actuator
      port: 8082 # service의 port
      targetPort: 8082 # pod의 target port
      protocol: TCP
  selector:
    app: response-back
